# torch-radon

./: README.md  pyproject.toml  setup.py
.github/workflows/: does-it-compile.yml  release.yml
examples/: end_to_end.py  fbp.py  landweber.py  radon_v2_example.py  radon_v2_example2.py  radon_v2_example3.py
include/: backprojection.h  backward.h  cache.h  cfg.h  defines.h  fft.h  forward.h  log.h  noise.h  parameter_classes.h  radon.h  rmath.h  symbolic.h  texture.h  utils.h
src/: backprojection.cu  backward.cu  cfg.cu  fft.cu  forward.cu  parameter_classes.cu  pytorch.cpp  symbolic.cpp  texture.cu
src/python/torch_radon/: cuda_backend.py  differentiable_functions.py  filtering.py  radon.py
tests/: test_fanbeam.py  test_parallel_beam.py  test_torch.py  utils.py
